--- a/CatEscape.html
+++ b/CatEscape.html
@@ -62,6 +62,7 @@
         <h2 class="iframe-title">a3池田</h2>
       </div>
       <div class="iframe-container">
+        <img src="/CatEscapeImage/a3.png">
         <iframe src="http://10.223.4.214/kimura/profile.html"></iframe>
         <h2 class="iframe-title">kimura</h2>
       </div>
